tests/paczka2/big_fuzzy/52779415.err
Error in line 24: WFHrciB6J3 S458 50,9
Error in line 19: C7j S252 72,6
Error in line 23: wMnfPARQl8X A529 36,0
Error in line 31: S458 S458 69,1
Error in line 32: wMnfPARQl8X A752 35,1
Error in line 25: o1N S458 88,0
Error in line 43: C7j S458 51,3
Error in line 69: 3DpSac A752 25,6
Error in line 71: pXXk0m A529 20,2
Error in line 64: WFHrciB6J3 A529 255,0
Error in line 72: S458 A529 40,1
Error in line 81: 3DpSac S458 12,1
Error in line 93: pXXk0m S252 141,0
Error in line 108: pXXk0m S458 -1,9
Error in line 105: pXXk0m S458 10,1
Error in line 112: C7j S252 59,4
Error in line 133: S458 A529 82,0
Error in line 134: S458 S458 39,6
Error in line 135: S458 A752 11,3
Error in line 127: C7j S252 2,9
Error in line 144: S458 S458 47,7
Error in line 149: 3DpSac S252 66,3
Error in line 161: C7j S252 20,3
Error in line 170: WFHrciB6J3 S458 12,0
Error in line 168: C7j A752 46,6
Error in line 172: C7j A529 5,2
Error in line 169: pXXk0m S458 89,1
Error in line 182: pXXk0m A529 206,0
Error in line 198: S458 S458 80,6
Error in line 200: S458 A752 16,9
Error in line 199: 3DpSac A752 13,8
Error in line 214: 3DpSac S458 64,7
Error in line 202: S458 S458 21,1
Error in line 231: S458 A752 61,1
Error in line 232: S458 A529 92,8
Error in line 237: C7j A752 95,6
